# android-accessory

./: CMakeLists.txt  Makefile
include/: accessory.h
src/: generic.c
